--- a/_posts/2020-12-14-aambala.md
+++ b/_posts/2020-12-14-aambala.md
@@ -1,11 +1,7 @@
 ---
 date: 2020-12-14 21:55:31
 layout: post
-coldi:
-  - title: Gplinks steps for Beginners in 2020
-    url: https://hd.isaiminiweb.online
-  - title: Gplinks steps for Beginners 2019
-    url: https://hd.isaiminiweb.online/feed.xml
+coldi: []
 title: Aambala
 year: "2015"
 language: Tamil
